message TimeSeries {
  required string TimeBase = 1;
  repeated string ColumnUnits = 2;
  repeated string ColumnLabels = 3;
  repeated string ColumnLabelValues = 4;
  repeated string ColumnRenderings = 5;
  repeated string ColumnFillValues = 6;
  repeated float Time = 7;
  repeated float Data = 8;
}
